Fix build on Java 9+